// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Card (snapshot) merges className on Card 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm mt-4"
>
  Body
</div>
`;

exports[`Card (snapshot) renders bare Card 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  Body
</div>
`;

exports[`Card (snapshot) renders full composition (Header + Title + Description + Content + Footer) 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="text-2xl font-semibold leading-none tracking-tight"
    >
      Title
    </div>
    <div
      class="text-sm text-muted-foreground"
    >
      Description text
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    Main content
  </div>
  <div
    class="flex items-center p-6 pt-0"
  >
    Footer
  </div>
</div>
`;
